Performed Analysis and conversion

--- a/EDA_Moviedata.ipynb
+++ b/EDA_Moviedata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "d8a2438a-26b1-478b-af18-39df53f3f98f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "2e7489cc-44f7-4490-af50-9041abfc45f4",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "[9827 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "f018101e-7222-4e32-b76e-0b93e0293d64",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "(9827, 9)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "4a892119-a619-43fc-abcc-009e2acd5679",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "db44202d-3c33-4f0b-90d3-167b6c704a6f",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "1ac62fc6-7d0d-46df-914a-cb4751672a09",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "13734d2e-b4cd-49cb-9591-ceca45a5ab56",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "Name: Genre, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "f2fae156-cbf5-4ad4-b7ae-9d08677c256f",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "max    5083.954000  31077.000000     10.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,9 +542,371 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ed84e84-3ba7-468a-8daa-9bff4c58402d",
+   "metadata": {},
+   "source": [
+    "Converting and Dropping the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2453bad0-a796-4ab1-87cf-fe8067adde80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Release_Date\"]=pd.to_datetime(df[\"Release_Date\"])\n",
+    "df[\"Release_Date\"].dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3b691a47-8537-4a24-a3ed-b843af8baf10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Release_Date\"]=df[\"Release_Date\"].dt.year\n",
+    "df[\"Release_Date\"].dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a84770f1-1448-49f4-8603-52040c9cfacb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2021\n",
+       "1    2022\n",
+       "2    2022\n",
+       "3    2021\n",
+       "4    2021\n",
+       "Name: Release_Date, dtype: int32"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Release_Date\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1521b26a-e7c9-49eb-ac05-3dfec60ac900",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols=['Overview', 'Original_Language','Poster_Url']\n",
+    "df.drop(cols,axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7cbff8aa-77ce-425a-9adc-c91ec7b2351b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Release_Date</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Popularity</th>\n",
+       "      <th>Vote_Count</th>\n",
+       "      <th>Vote_Average</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>5083.954</td>\n",
+       "      <td>8940</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>Action, Adventure, Science Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>The Batman</td>\n",
+       "      <td>3827.658</td>\n",
+       "      <td>1151</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Crime, Mystery, Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>No Exit</td>\n",
+       "      <td>2618.087</td>\n",
+       "      <td>122</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>Thriller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Encanto</td>\n",
+       "      <td>2402.201</td>\n",
+       "      <td>5076</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>Animation, Comedy, Family, Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>The King's Man</td>\n",
+       "      <td>1895.511</td>\n",
+       "      <td>1793</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Action, Adventure, Thriller, War</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Release_Date                    Title  Popularity  Vote_Count  \\\n",
+       "0          2021  Spider-Man: No Way Home    5083.954        8940   \n",
+       "1          2022               The Batman    3827.658        1151   \n",
+       "2          2022                  No Exit    2618.087         122   \n",
+       "3          2021                  Encanto    2402.201        5076   \n",
+       "4          2021           The King's Man    1895.511        1793   \n",
+       "\n",
+       "   Vote_Average                               Genre  \n",
+       "0           8.3  Action, Adventure, Science Fiction  \n",
+       "1           8.1            Crime, Mystery, Thriller  \n",
+       "2           6.3                            Thriller  \n",
+       "3           7.7  Animation, Comedy, Family, Fantasy  \n",
+       "4           7.0    Action, Adventure, Thriller, War  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d74fae47-bde3-4a77-b2a6-7fa137b1dc8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Action, Adventure, Science Fiction', 'Crime, Mystery, Thriller',\n",
+       "       'Thriller', ..., 'Comedy, TV Movie, Romance',\n",
+       "       'Science Fiction, Fantasy, Family, Music',\n",
+       "       'War, Drama, Science Fiction'], shape=(2337,), dtype=object)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Genre'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b9037555-a4ab-4464-aa71-962ba1ed31f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Release_Date</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Popularity</th>\n",
+       "      <th>Vote_Count</th>\n",
+       "      <th>Vote_Average</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>5083.954</td>\n",
+       "      <td>8940</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>5083.954</td>\n",
+       "      <td>8940</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>Adventure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>5083.954</td>\n",
+       "      <td>8940</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>The Batman</td>\n",
+       "      <td>3827.658</td>\n",
+       "      <td>1151</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>The Batman</td>\n",
+       "      <td>3827.658</td>\n",
+       "      <td>1151</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Mystery</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Release_Date                    Title  Popularity  Vote_Count  \\\n",
+       "0          2021  Spider-Man: No Way Home    5083.954        8940   \n",
+       "1          2021  Spider-Man: No Way Home    5083.954        8940   \n",
+       "2          2021  Spider-Man: No Way Home    5083.954        8940   \n",
+       "3          2022               The Batman    3827.658        1151   \n",
+       "4          2022               The Batman    3827.658        1151   \n",
+       "\n",
+       "   Vote_Average            Genre  \n",
+       "0           8.3           Action  \n",
+       "1           8.3        Adventure  \n",
+       "2           8.3  Science Fiction  \n",
+       "3           8.1            Crime  \n",
+       "4           8.1          Mystery  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Genre']=df['Genre'].str.split(', ')\n",
+    "df=df.explode('Genre').reset_index(drop=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c2443273-4444-49ae-8e20-707048cb59d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CategoricalDtype(categories=['Action', 'Adventure', 'Animation', 'Comedy', 'Crime',\n",
+       "                  'Documentary', 'Drama', 'Family', 'Fantasy', 'History',\n",
+       "                  'Horror', 'Music', 'Mystery', 'Romance', 'Science Fiction',\n",
+       "                  'TV Movie', 'Thriller', 'War', 'Western'],\n",
+       ", ordered=False, categories_dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#casting genre column into category\n",
+    "df[\"Genre\"]=df['Genre'].astype('category')\n",
+    "df['Genre'].dtypes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b225576-c822-418e-99ea-9a37c1842802",
+   "id": "3481a55e-89de-40d9-9131-7c1929668115",
    "metadata": {},
    "outputs": [],
    "source": []
