--- a/EDA_Moviedata.ipynb
+++ b/EDA_Moviedata.ipynb
@@ -904,9 +904,223 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08a9b0a6-383a-4729-b690-83898af37fbc",
+   "metadata": {},
+   "source": [
+    "Label encoding the Vote_Average column \n",
+    "\n",
+    "By using the labels , popular , average , below_average and not_popular to describe it more using categorize_col() function \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ef593e6b-f0dc-4538-af22-1b8f7465b31e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categorize_col(df,col,labels):\n",
+    "    edges=[df[col].describe()['min'],\n",
+    "          df[col].describe()['25%'],\n",
+    "          df[col].describe()['50%'],\n",
+    "          df[col].describe()['75%'],\n",
+    "          df[col].describe()['max']]\n",
+    "    df[col]=pd.cut(df[col],edges,labels=labels,duplicates='drop')\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "99c9ba29-297c-4849-9229-d452b8053aa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['popular', 'below_average', 'average', 'not_pupular', NaN]\n",
+       "Categories (4, object): ['not_pupular' < 'below_average' < 'average' < 'popular']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels=['not_pupular','below_average','average','popular']\n",
+    "categorize_col(df,'Vote_Average',labels)\n",
+    "df['Vote_Average'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b7c2d5c6-02ec-4684-b921-0b145596592d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Release_Date</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Popularity</th>\n",
+       "      <th>Vote_Count</th>\n",
+       "      <th>Vote_Average</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>5083.954</td>\n",
+       "      <td>8940</td>\n",
+       "      <td>popular</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>5083.954</td>\n",
+       "      <td>8940</td>\n",
+       "      <td>popular</td>\n",
+       "      <td>Adventure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Spider-Man: No Way Home</td>\n",
+       "      <td>5083.954</td>\n",
+       "      <td>8940</td>\n",
+       "      <td>popular</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>The Batman</td>\n",
+       "      <td>3827.658</td>\n",
+       "      <td>1151</td>\n",
+       "      <td>popular</td>\n",
+       "      <td>Crime</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>The Batman</td>\n",
+       "      <td>3827.658</td>\n",
+       "      <td>1151</td>\n",
+       "      <td>popular</td>\n",
+       "      <td>Mystery</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Release_Date                    Title  Popularity  Vote_Count Vote_Average  \\\n",
+       "0          2021  Spider-Man: No Way Home    5083.954        8940      popular   \n",
+       "1          2021  Spider-Man: No Way Home    5083.954        8940      popular   \n",
+       "2          2021  Spider-Man: No Way Home    5083.954        8940      popular   \n",
+       "3          2022               The Batman    3827.658        1151      popular   \n",
+       "4          2022               The Batman    3827.658        1151      popular   \n",
+       "\n",
+       "             Genre  \n",
+       "0           Action  \n",
+       "1        Adventure  \n",
+       "2  Science Fiction  \n",
+       "3            Crime  \n",
+       "4          Mystery  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7b25bb78-1605-4197-8822-334d501b0716",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vote_Average\n",
+       "not_pupular      6999\n",
+       "below_average    6581\n",
+       "average          6432\n",
+       "popular          5540\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Vote_Average'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "84c87ec7-87ad-4b60-9c7e-f8e3f64e1a33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Release_Date      0\n",
+       "Title             0\n",
+       "Popularity        0\n",
+       "Vote_Count        0\n",
+       "Vote_Average    241\n",
+       "Genre             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3481a55e-89de-40d9-9131-7c1929668115",
+   "id": "1b127588-4592-4672-ab9c-43929ab1b502",
    "metadata": {},
    "outputs": [],
    "source": []
